11-wp-mail-sender.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: wp-mail-sender
 labels:
   app: wp-mail-sender
spec:
 replicas: 1
 selector:
   matchLabels:
     app: wp-mail-sender
 template:
   metadata:
     labels:
       app: wp-mail-sender
   spec:
     containers:
       - name: wp-mail-sender
         image: europe-west1-docker.pkg.dev/snappy-density-406712/apis-base/wp-mail-sender
         imagePullPolicy: Always
         volumeMounts:
          - name: service-account-secret
            mountPath: /secrets
            readOnly: true
     volumes:
       - name: service-account-secret
         secret:
          secretName: subscriber-sa-key
