2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: salginci-api
  labels:
    app: salginci-api
spec:
  selector:
    app: salginci-api
  ports:
  - name: server
    port: 80
    targetPort: 80
