5-http-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-shiftbox-dev
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong 
spec:
  rules:
    - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: salginci-api
             port:
               number: 80
